# mushkin

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .mcp.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  GEMINI.md  LICENSE  README.md  SOUL.md  THIRD_PARTY_LICENSES.md  TODO-settings-migration.md  release-please-config.json  resources.qrc
src/: CMakeLists.txt  main.cpp
src/automation/: CMakeLists.txt  alias.cpp  alias.h  constants.h  plugin.cpp  plugin.h  script_language.h  sendto.h  timer.cpp  timer.h  trigger.cpp  trigger.h  variable.h
src/network/: CMakeLists.txt  ansi_formatter.cpp  ansi_formatter.h  i_remote_transport.h  remote_access_server.cpp  remote_access_server.h  remote_client.cpp  remote_client.h  ssh_host_key_manager.cpp  ssh_host_key_manager.h  ssh_server_session.cpp  ssh_server_session.h  telnet_server_session.cpp  telnet_server_session.h  world_socket.cpp  world_socket.h
src/storage/: CMakeLists.txt  database.cpp  database.h  global_options.cpp  global_options.h
src/text/: CMakeLists.txt  action.cpp  action.h  line.cpp  line.h  style.cpp  style.h
src/ui/: CMakeLists.txt  lua_dialog_registration.cpp  lua_dialog_registration.h  main_window.cpp  main_window.h  main_window_commands.cpp
src/ui/dialogs/: alias_edit_dialog.cpp  alias_edit_dialog.h  alias_list_dialog.cpp  alias_list_dialog.h  ascii_art_dialog.cpp  ascii_art_dialog.h  choose_notepad_dialog.cpp  choose_notepad_dialog.h  colour_picker_dialog.cpp  colour_picker_dialog.h  command_history_dialog.cpp  command_history_dialog.h  command_options_dialog.cpp  command_options_dialog.h  complete_word_dialog.cpp  complete_word_dialog.h  confirm_preamble_dialog.cpp  confirm_preamble_dialog.h  debug_lua_dialog.cpp  debug_lua_dialog.h  debug_lua_dialog_example.cpp  debug_world_input_dialog.cpp  debug_world_input_dialog.h  edit_dialog.cpp  edit_dialog.h  find_dialog.cpp  find_dialog.h  function_list_dialog.cpp  function_list_dialog.h  function_list_dialog_example.cpp  generate_id_dialog.cpp  generate_id_dialog.h  generate_name_dialog.cpp  generate_name_dialog.h  global_change_dialog.cpp  global_change_dialog.h  global_preferences_dialog.cpp  global_preferences_dialog.h  go_to_line_dialog.cpp  go_to_line_dialog.h  (+83 more)
src/ui/preferences/: item_list_page_base.cpp  item_list_page_base.h  preferences_page_base.cpp  preferences_page_base.h  unified_preferences_dialog.cpp  unified_preferences_dialog.h
src/ui/preferences/pages/: aliases_page.cpp  aliases_page.h  autosay_page.cpp  autosay_page.h  colors_page.cpp  colors_page.h  connection_page.cpp  connection_page.h  info_page.cpp  info_page.h  input_page.cpp  input_page.h  keypad_page.cpp  keypad_page.h  logging_page.cpp  logging_page.h  macros_page.cpp  macros_page.h  output_page.cpp  output_page.h  paste_send_page.cpp  (+11 more)
src/ui/views/: input_view.cpp  input_view.h  output_view.cpp  output_view.h  output_view_miniwindows.cpp  world_widget.cpp  world_widget.h
src/ui/widgets/: activity_window.cpp  activity_window.h
src/utils/: CMakeLists.txt  app_paths.cpp  app_paths.h  error_codes.h  font_utils.h  logging.cpp  logging.h  name_generator.cpp  name_generator.h  url_linkifier.cpp  url_linkifier.h
src/world/: CMakeLists.txt  accelerator_manager.cpp  accelerator_manager.h  automation_registry.cpp  automation_registry.h  blend_modes.h  color_utils.h  config_options.cpp  config_options.h  connection_manager.cpp  connection_manager.h  docommand_callbacks.cpp  docommand_callbacks.h  hotspot.h  lua_dialog_callbacks.cpp  lua_dialog_callbacks.h  lua_utils.cpp  macro_keypad_compat.cpp  macro_keypad_compat.h  miniwindow.cpp  miniwindow.h  mxp_engine.cpp  mxp_engine.h  mxp_types.h  notepad_widget.cpp  notepad_widget.h  output_formatter.cpp  output_formatter.h  script_engine.cpp  script_engine.h  script_engine_callbacks.cpp  sound_manager.cpp  sound_manager.h  speedwalk_engine.cpp  speedwalk_engine.h  telnet_parser.cpp  telnet_parser.h  view_interfaces.h  world_alias_execution.cpp  world_context.h  (+19 more)
src/world/lua_api/: lrexlib.cpp  lua_api.h  lua_bind.h  lua_common.h  lua_constants.cpp  lua_progress.cpp  lua_registration.cpp  lua_registration.h  world_aliases.cpp  world_arrays.cpp  world_colors.cpp  world_commands.cpp  world_crypto.cpp  world_database.cpp  world_info.cpp  world_logging.cpp  world_logging_opts.cpp  world_mapper.cpp  world_miniwindow_drawing.cpp  world_miniwindow_images.cpp  world_miniwindow_lifecycle.cpp  world_miniwindows.cpp  world_misc.cpp  world_network.cpp  world_notepads.cpp  world_output.cpp  world_plugins.cpp  world_session.cpp  world_settings.cpp  world_sounds.cpp  world_timers.cpp  world_triggers.cpp  world_udp.cpp  world_ui_control.cpp  world_utilities.cpp  world_variables.cpp
tests/: CMakeLists.txt  lua_api_test_fixture.h  test_accelerator_dispatch_gtest.cpp  test_accelerator_manager_gtest.cpp  test_alias_api_gtest.cpp  test_alias_execution_gtest.cpp  test_alias_integration_gtest.cpp  test_ansi_formatter_gtest.cpp  test_api.lua  test_array_api_gtest.cpp  test_bit_library_gtest.cpp  test_blend_modes_gtest.cpp  test_callbacks.lua  test_color_lua_api_gtest.cpp  test_command_color_api_gtest.cpp  test_command_execution_gtest.cpp  test_command_history_navigation_gtest.cpp  test_command_lua_api_gtest.cpp  test_command_stacking_gtest.cpp  test_config_introspection_gtest.cpp  test_connection_manager_gtest.cpp  test_database_gtest.cpp  test_database_lua_api_gtest.cpp  test_docommand_gtest.cpp  test_global_options_gtest.cpp  test_info_lua_api_gtest.cpp  test_input_wrap_gtest.cpp  test_lfs_gtest.cpp  test_line_logging_gtest.cpp  test_logging_lua_api_gtest.cpp  test_lua_api_gtest.cpp  test_lua_basics_gtest.cpp  test_lua_database_gtest.cpp  test_lua_libraries_gtest.cpp  test_lua_registration_gtest.cpp  test_main_core.cpp  test_main_gui.cpp  test_miniwindow_creation.cpp  test_miniwindow_drawing.cpp  test_miniwindow_drawing_parity_gtest.cpp  (+57 more)
tests/fixtures/: Aardwolf.mcl  lua_helpers.h  world_fixtures.h
tools/font-diagnostic/: CMakeLists.txt  main.cpp
(+48 files in other folders)
